# chrisplusplus

./: .gitignore  CMakeLists.txt  language.spec
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: chrisplusplus.tmLanguage.json
examples/: adt.chr  arraymethods.chr  arrays.chr  assertions.chr  async.chr  binaryio.chr  bitwise.chr  casting.chr  channels.chr  classes.chr  comprehensive.chr  concurrent.chr  conversions.chr  enums.chr  errors.chr  exec.chr  extern.chr  fibonacci.chr  fileio.chr  generics.chr  globals.chr  hello.chr  higherorder.chr  http.chr  imports.chr  inheritance.chr  interfaces.chr  json.chr  lambdas  lambdas.chr  let  let.chr  maps.chr  math.chr  mathlib.chr  messy.chr  networking.chr  nullsafety.chr  operators  operators.chr  (+12 more)
examples/doom/: README.md  build_doom.sh  dg_shim.c  doom.chr
runtime/: gc.c  gc.h  runtime.c
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/codegen/: codegen.cpp  codegen.h
src/common/: diagnostic.cpp  diagnostic.h  source_file.cpp  source_file.h  source_location.cpp  source_location.h
src/fmt/: formatter.cpp  formatter.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/lsp/: lsp_main.cpp  lsp_server.cpp  lsp_server.h
src/parser/: parser.cpp  parser.h
src/sema/: symbol_table.cpp  symbol_table.h  type_checker.cpp  type_checker.h  types.cpp  types.h
test/: test_math.chr
tests/annotations/: test_annotations.cpp
tests/async/: test_async.cpp
tests/binaryio/: test_binaryio.cpp
tests/bitwise/: test_bitwise.cpp
tests/casting/: test_casting.cpp
tests/codegen/: test_codegen.cpp
tests/common/: test_diagnostic.cpp  test_source_file.cpp
tests/fmt/: test_formatter.cpp
tests/gc/: test_gc.cpp
tests/globals/: test_globals.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
tests/pointers/: test_pointers.cpp
tests/sema/: test_type_checker.cpp
tests/shared/: test_shared.cpp
tests/stdlib/: test_stdlib.cpp
tests/structs/: test_structs.cpp
tests/typedarrays/: test_typedarrays.cpp
tests/unsafe/: test_unsafe.cpp
